--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "start": "gulp dev",
     "dev": "gulp dev"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "IE 9"
+  ],
   "devDependencies": {
+    "babel-preset-env": "^1.6.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^6.1.2",
     "gulp-connect": "^5.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-stylus": "^2.6.0"
